@@ -2,6 +2,8 @@
 v6.2.5-git
 ----------
 
+[mms] Fix regression when working with multiple selected messages with a POP3
+      server (Bug #13759).
 [mms] Only count successful compose mails when determining recipient limits
       (Bug #13751).
 
